Fix style and compile error