@@ -5,6 +5,7 @@ import lombok.EqualsAndHashCode;
 import lombok.experimental.SuperBuilder;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -39,7 +40,7 @@ public final class EnumDef extends AbstractTypeDef {
 
     @Override
     public List<TypeInfo> directSupertypes() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
